@@ -12,3 +12,4 @@ Project : Investors Simulation
 - [25-02-2017] [1.4] Generate the modelling for 10 defensive, aggressive and mixed investors (not 1000 for the moment)
 - [25-02-2017] [1.41] Generate the modelling for 1000 defensive and aggressive investors (Dataframe optimize)
 - [26-02-2017] [2.0] Simulation of investment for each year
+- [27-02-2017] [2.1] Clean the code and add comment
